@@ -1,6 +1,8 @@
 ## 0.1.1
 - `EUCAST_rules` applies for amoxicillin even if ampicillin is missing
 - Edited column names to comply with GLIMS, the laboratory information system
+- Added more valid MIC values
+- Renamed 'Daily Defined Dose' to 'Defined Daily Dose'
 
 ## 0.1.0
 - First submission to CRAN.
